# gdeltscripts

./: .gitignore  README.md  app.py  arch.py  bruh.py  categorize.py  dl_archives.py  dlarchivesv1.py  domains.xlsx  extract_from_page.py  filter.py  filter_ara_text.py  find_keywords.py  get_from_date.py  getdomaincountry.py  getdomainstats.py  gtranslate.py  keywords.py  label.py  main.py  multi.py  multiprocessing.py  parseCSV.py  pre_label.py  pre_process.py  pyproject.toml  requirements.txt  root_event_codes.csv  rss.py  spacy_test.py  start_api.sh  start_scraper.sh  start_server.sh  start_translate_api.sh  stop_words.txt  test.py  train.py  translate.py
csvDataScraper/: dataGrabber.py  urlChange.py
rss/: dlnews.py  requirements.txt  rss.txt
scripts/: arch.py  dlarchivesv1.py  find_keywords.py  gtranslate.py  translate.py
