[tool.poetry]
name = "gdeltscripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<3.10"
pip = "^22.3.1"
spacy = "^3.4.3"
streamlit = "^1.15.2"
nltk = "^3.7"
transformers = "^4.25.1"
tensorflow = "^2.11.0"
newspaper3k = "^0.2.8"
alive-progress = "^2.4.1"
googletrans = "4.0.0rc1"
wordcloud = "^1.8.2.2"
snorkel = "^0.9.9"
feedparser = "^6.0.10"
sklearn = "^0.0.post1"
seaborn = "^0.12.2"
camel-tools = "^1.4.1"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
